@@ -1,3 +1,7 @@
+2018-11-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* dvispc.c, dvispc.man, dvispc-{ja,en}.txt: Better help message.
+
 2018-10-16  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* dvispc.test: Add tests for underflow.
